package org.example;

abstract class Users {
    protected String name;
    protected int id;

    public Users(String name, int id) {
        this.name = name;
        this.id = id;
    }

    public Users() {

    }

    void PrintDetail() {

    }
}
